# satsim

./: .gitignore  README.txt  Sesnoren und Aktoren.txt  bausteinkatalog.20121025.ods  bausteinkatalog.ods  iBoss AOCS Optimierung.txt  iboss.py  ibosssim.py  ibossxml.py  katalogreport.py  loadfromxml.py  missionsim.py  odspy.py  optsat.py  orbitsimulation.py  rendersat.py  saveasxml.py  solarcell.py  tableop.py  todo.txt
2x2x2 Bausteine/: BSV2x2x2.mo
Experimente/aocs/: draw_experiments.py  result.0100.0200.csv  result_nodelay.csv  resultmiddle.0050.0100.ms.csv
Experimente/thermal/: 2x1x1_VEROSIM.mos  2x2x3_mit_regelung.ism  3x3x3.mos  3x3x3_VEROSIM.mos  Beispiel_TB1.mo  Enmap_Modusat.mo  Model3x3x3.mo  Model_3x3x2.mo  Modell1_noEvent.mo  Referenzmission_Enmap_komponenten.mo  Satellite_2x2x2_mit_Sonne.mo  Satellite_2x2x2x.mo  drei_Bausteine_in_Reihe-simulierter_Baustein.mo  generic_satellite_2x1x1_VEROSIM.mo  generic_satellite_2x2x2.mo  generic_satellite_3x3x3.mo  generic_satellite_3x3x3_VEROSIM.mo  generic_satellite_3x3x3_sun_var_rad.mo  jklxcvbni.mo  radiatortest.mo  result_2x2x3_regelung_isoliert.rfs  result_2x2x3_regelung_mit_TSS.rfs
bausteinkatalog/: bausteine.xml  bausteinkatalog.xml  katalog.1.1.xml  katalog.1.2.xml  katalog.xml  katalog1.0.xml  komponenten.xml  missionen.xml  referenzmissionen.xml  testmission.xml
catalog/: Bausteinreport.rst  catalog_tutorial.py  cmd_catalog.py  iboss_catalogue.py  mystylesheet.style  optsat.py  readme.txt  rendersat.sh
catalog/bausteinkatalog/: bausteine.xml  catalog.1.6.xml  komponenten.xml
catalog/utils/: __init__.py  catfuse.py  iboss_odt2xml.py  odspy.py
communications_library/: CMakeLists.txt  main.cpp  readme.rst  rosmo.cpp  rosmo.h  rosmo.mo  rosmoc.mo  test.h
documentation/: example.tex  generatepaper_isairas.py  isairas.sty  israiras-2014.tex
model/: DoubleBuildingBlock_thermal.mo  EVS.mo  EVS2.mo  Element1Dcd.mo  MaterialDatabase.mo  battery.mo  buildingblock.mo  connectionelement.mo  dc_limiter.mo  dc_limiter_test.mo  dcdc_characteristic.mo  dcdc_converter.mo  dcdc_converter_no_limiter.mo  dcdc_test.mo  dcmodel.mo  dockinterface.mo  exprgenerator.mo  generatorblocks.mo  generic_sat.mo  iboss.mo  iboss_Int.mo  iboss_OBC.mo  iboss_PCU.mo  iboss_bb.mo  iboss_bb_catalogue.mo  iboss_bb_solar.mo  iboss_components.mo  iboss_connection.mo  iboss_connector.mo  iboss_dockinterface.mo  iboss_int.mo  iboss_interface.mo  iboss_sats.mo  iboss_sim_EVS.mo  iboss_thermal.mo  ibosssim.mo  illumination.mo  modelicatests.mo  orbit_parameter.mo  orbit_parameter_2.mo  (+18 more)
model/Bausteindummy-thermal/: DummyBaustein.mo
model/EVS_Experimente/: EVS2.mo  EVS2x2.mo  EVS2x2x1.mo  EVS2x2x3.mo  EVS2x2x3simx.mo  EVS2x2x4.mo  EVS3.mo  EVS4.mo  EVS5.mo  EVS6.mo
model/alt/: dcdc_behavioural.bk.mo  dcdc_behavioural.mo
model/iboss/: MaterialDatabase.mo  OpticalPropertiesDatabase.mo  Strahlungsleistung_3x3x3_LEO_EnMap_SunPointing_sort_spalt.txt  buildingblocks.mo  components.mo  controlblocks.mo  iboss.mo  iboss_thermal.mo  modelicatests.mo  package.mo  package.order  satcomponents.mo  satellites.mo  thermochrom_alpha_epsilon.txt
model/obsolete/: illumination.mo
model/satcomponents/: buildingblocks.mo  components.mo  ibossmo.mo  modelicatests.mo  package.mo  package.order.bk  satcomponents.mo  satellites.mo
model/thermale Schnittstelle/: BB_cooler.mo  BB_heater.mo  BuildingBlockDouble_thermal.mo  BuildingBlock_thermal.mo  DoubleBuildingBlock_thermal.mo  Doublethermal_Panel_with_2Interfaces.mo  Schnittstelle.mo  intra_Baustein_connector.mo  intra_BuildingBlock_connector.mo  materials.mo  solar_radiance.mo  space_radiator.mo  test_2panele.mo  thermalModel_ElectronicBox.mo  thermalModel_ElectronicBoxDouble.mo  thermal_Panel_with_Interface.mo  thermal_TIM.mo  thermal_connector.mo  thermal_element.mo  thermal_for_combined_sim.mo  thermale_SS.mo
python/: Bausteinreport.rst  EVS_sim.py  allgemeine Bausteinregeln (neu).ods  bausteinkatalog.ods  blenderhelper.sh  blub.py  catalog_tutorial.py  catalog_tutorial_csv.py  cataloguereport.py  cmd_catalog.py  compile_bb.py  compile_fmu.py  compile_satellites.py  compilesatellites.py  eps_report.py  filter_csv_data.py  fmutest.py  generic_satellite.py  iboss.py  iboss_catalogue.py  iboss_catalogue_report.py  iboss_modelica_generate_propulsion_BB.py  iboss_modelica_generic_satellite.py  iboss_modelica_generic_satellite_var_rad_optical_properties.py  iboss_odt2xml.py  iboss_odt_load.py  iboss_xml_load.py  iboss_xml_save.py  ibosssim.py  ibossxml.py  jmu_model.py  odspy.py  optsat.py  orbitsimulation.py  readme.txt  rendergl.py  rendersat.py  rendersat_edit.sh  report.py  saveasxml.py  (+6 more)
python/Materialdatenbank/: SolidWorks_materials_bearbeitet.xls  materials.mo
python/bausteinkatalog/: Bausteinkatalog_BA_Francesca Heeg.ods  FZI_BB_catalogue_v0.1.xml  Satellitensubsysteme.ods  Satellitensubysteme Mittelwerte_Schätzung für Bausteingröße.ods  Vergleich der Packungsdichte.ods  Volumenausnutzung.ods  bausteinkatalog.ods  catalog.1.3.xml  catalog.1.4.xml  catalog.1.5.xml  catalog.1.6.xml  katalog.1.1.xml  katalog.1.2.xml  katalogdata.iboss  missionen.xml  Übersicht Satellitenbus GEO.ods
python/scripts/: filter_csv_data_var_rad.py  iboss_modelica_generic_satellite_for_VEROSIM.py
python/utils/: csv_laden_Beispiel.py
rosmo/: CMakeLists.txt  CMakeLists.txt.old  compile_fmu.py  compile_rosmoc.py  main.cpp  om_test_fmu.mo  package.xml  readme.rst  rosmo.cpp  rosmo.h  rosmo.mo  rosmo.mos  rosmoc.c  rosmoc.h  runfmu.py
rosmo/Resources/Include/: rosmo.h  rosmoc.h
scripts/: generate_mos_variable_h_TSS_h_intra.py  iboss_modelica_generic_satellite.py  thermal_results_matplotlib.py  thermal_results_matplotlib_var_rad.py
scripts/Materialdatenbank/: SolidWorks_materials.xls  SolidWorks_materials.xlsx  (+2 more)
thermale Schnittstelle/: thermale_SS.mo
virtual_satellite/: default.py
vs/: default.py
(+668 files in other folders)
